--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "node-app",
     "version": "1.0.0",
-    "description": "A simple Node.js app",
-    "main": "index.js",
     "scripts": {
-      "start": "node index.js"
+      "start": "node index.js",
+      "test": "echo \"No test specified\" && exit 0"
     },
     "dependencies": {
       "express": "^4.18.2"
     }
   }
+  
   
